Add figaro and pusher to configure api keys.

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -19,4 +19,4 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  secret_key_base: AIzaSyA_-EvrO-7NgASAJR1UIkoeLXxc1GgPfd0
+  secret_key_base: <% ENV["google_api_key"] %>
